# dagclis

./: .gitignore  Makefile  README.md  demo.py  demo.sh  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg
dagcli/: Design.md  ai.py  client.py  cmd.py  config.py  configs.py  dags.py  execs.py  forwarder.py  jobs.py  main.py  messages.py  nodes.py  proxy.py  root.py  sessions.py  swaggerutils.py  tasks.py  transformers.py  tries.py  ty.py  utils.py  vlt.py
dagcli/schemas/: swagger.json
dagcli/scripts/: bashrc  dag.commonrc  zshrc
dagcli/vault/: credentials.py  ips.py  keys.py  roles.py  root.py  urls.py  utils.py
demo2/: cpu_health_check.py  demo2.sh  mem_check.py  params.json
docs/: Design.md
schemas/: swagger.json
scripts/: setupbash.sh
tests/: trie.py
