
[metadata]
name = dagcli
version = attr: dagcli.__version__
author = Sriram Panyam
author_email = sri@dagknows.com
url = https://github.com/dagknows/dagclis
description = Our CLI utilities for DagKnows
long_description = file: README.md
long_description_content_type = text/markdown
keywords = dagknows, cli, api, setuptools
license = BSD 3-Clause License
classifiers =
	License :: OSI Approved :: BSD License
	Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires = 
  requests
  typer[all]

[options.package_data]
dagcli = swagger/*.json, *.txt
* = README.md

[options.entry_points]
console_scripts =
    dagcligen = dagcli.main:cli
    dagcli = dagcli.ty:app
    dk = dagcli.ty:app
